# chesserazade

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  HANDOFF.md  NOTICE  README.md  TODO.md  test.sh  test1000.sh  test200.sh  testmt.sh  testply.sh
analyzer/: add_bookmark_dialog.cpp  add_bookmark_dialog.hpp  board_widget.cpp  board_widget.hpp  bookmarks.cpp  bookmarks.hpp  bookmarks_dialog.cpp  bookmarks_dialog.hpp  fetch_dialog.cpp  fetch_dialog.hpp  filter_dialog.cpp  filter_dialog.hpp  game_list_model.cpp  game_list_model.hpp  game_list_view.cpp  game_list_view.hpp  game_view.cpp  game_view.hpp  main.cpp  main_window.cpp  main_window.hpp  pgn_cache.cpp  pgn_cache.hpp  pgnmentor_index.cpp  pgnmentor_index.hpp  search_tree.cpp  search_tree.hpp  search_tree_model.cpp  search_tree_model.hpp  solve_panel.cpp  solve_panel.hpp  solve_worker.cpp  solve_worker.hpp  unzip.cpp  unzip.hpp
data/: magics.txt  pgnmentor_index.json
docs/: HANDOFF_pl.md  architecture.md  architecture_pl.md  coding_style.md  coding_style_pl.md
docs/version_notes/: 0.1.md  0.1_pl.md  0.2.md  0.2_pl.md  0.3.md  0.3_pl.md  0.4.md  0.4_pl.md  0.5.md  0.5_pl.md  0.6.md  0.6_pl.md  0.7.md  0.7_pl.md  0.8.md  0.8_pl.md  0.9.md  0.9_pl.md  1.0.md  1.0_pl.md  1.1.md  1.1_pl.md  1.2.md  1.2_pl.md  1.3.md  1.3_pl.md  2.0.md  2.0_pl.md
include/chesserazade/: bitboard.hpp  board.hpp  evaluator.hpp  fen.hpp  game.hpp  game_analyzer.hpp  game_index.hpp  move.hpp  move_generator.hpp  net_fetcher.hpp  pgn.hpp  pgn_index.hpp  puzzle_solver.hpp  san.hpp  search.hpp  transposition_table.hpp  types.hpp  zobrist.hpp
src/: main.cpp
src/board/: attacks_pext.cpp  bitboard.cpp  board8x8_mailbox.cpp  board8x8_mailbox.hpp  board_bitboard.cpp  board_bitboard.hpp  magic.cpp  magic.hpp  zobrist.cpp
src/cli/: cmd_analyze.cpp  cmd_analyze.hpp  cmd_fetch.cpp  cmd_fetch.hpp  cmd_magics_gen.cpp  cmd_magics_gen.hpp  cmd_moves.cpp  cmd_moves.hpp  cmd_perft.cpp  cmd_perft.hpp  cmd_repl.cpp  cmd_repl.hpp  cmd_show.cpp  cmd_show.hpp  cmd_solve.cpp  cmd_solve.hpp  cmd_uci.cpp  cmd_uci.hpp  cmd_version.cpp  cmd_version.hpp  command_dispatch.cpp  command_dispatch.hpp
src/eval/: evaluator.cpp
src/game/: game.cpp
src/io/: fen.cpp  fen_fields.hpp  game_index.cpp  move.cpp  pgn.cpp  pgn_index.cpp  san.cpp
src/move_generator/: bitboard_move_generator.cpp  move_generator.cpp
src/net/: curl_fetcher.cpp
src/search/: game_analyzer.cpp  puzzle_solver.cpp  search.cpp  see.cpp  see.hpp  transposition_table.cpp
tests/: CMakeLists.txt  test_analyzer.cpp  test_bitboard.cpp  test_board.cpp  test_board_bitboard.cpp  test_bookmarks.cpp  test_evaluator.cpp  test_fen.cpp  test_fetch.cpp  test_game.cpp  test_game_index.cpp  test_magic.cpp  test_move.cpp  test_perft.cpp  test_perft_bitboard.cpp  test_pgn.cpp  test_pgn_index.cpp  test_quiescence.cpp  test_san.cpp  test_search.cpp  test_search_tree.cpp  test_tree_recorder.cpp  test_tt.cpp  test_types.cpp  test_uci.cpp  test_zobrist.cpp
tools/: blunder_hunt.py  match.py  perft_bench.cpp  refresh_pgnmentor_index.py  replay_game4.py  tourney.py
